prototype/src/compilers/coco/url/Url.atg
COMPILER Url
TOKENS
PRODUCTIONS
	Url 	= Httpaddress | Ftpaddress | Telnetaddress | Gopheraddress.
	Httpaddress 	= 'h' 't' 't' 'p' ':' '/' '/' Hostport [ '/' Path ] [ '?' Search ].
	Ftpaddress 		= 'f' 't' 'p' ':' '/' '/' Login '/' Path.
	Telnetaddress 	= 't' 'e' 'l' 'n' 'e' 't' ':' '/' '/' Login.
	Gopheraddress 	= 'g' 'o' 'p' 'h' 'e' 'r' ':' '/' '/' Hostport ['/' Gtype [ Selector ] ] [ '?' Search ].
	Login 			= User [ ':' Password ] '@' Hostport.
	Hostport 		= Host [ ':' Port ].
	Host 			= Hostname | Hostnumber.
	Hostname 		= Ialpha [ '.' Hostname ].
	Hostnumber 		= Digits '.' Digits '.' Digits '.' Digits.
	Port 			= Digits.
	Path 			= Xalphas [ '/' Path ].
	Search 			= Xalphas [ '+' Search ].
	Selector 		= Path.
	User 			= Xalphas.
	Password 		= Xalphas.
	Gtype 			= Xalpha.
	Xalpha 			= Alpha | Digit | Safe | Extra.
	Xalphas 		= Xalpha [ Xalphas ].
	Ialpha 			= Alpha [ Xalphas ].
	Alpha 			= 'a' | 'b' | 'c' | 'A' | 'B' | 'C'.
	Digit 			= '0' | '1' | '2' | '3'.
	Safe 			= '$' | '-' | '_' | '&'.
	Extra 			= '!' | '*' | '(' | ')' | ';' | ','.
	Digits 			= Digit [ Digits ].


END Url.
